<resources>
    <string name="app_name">RazanStoreApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">حذف</string>

    <string name="menu_home">""</string>
    <string name="menu_new_factor">"فاکتور فروش"</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="splash_title">نرم افزار فروشگاهی پارسه</string>
    <string name="user_code">کد کاربری</string>
    <string name="please_wait">لطفا کمی صبر کنید...</string>
    <string name="login">ورود</string>

    <string name="cancel">بستن</string>
    <string name="action_yes">بلی</string>
    <string name="please_insert_user_code">کد کاربری را وارد نمایید.</string>
    <string name="please_insert_password">رمز عبور را وارد نمایید.</string>
    <string name="password">رمز عبور</string>
    <string name="work_desk">صندوق</string>
    <string name="atention">توجه</string>
    <string name="yes">بلی</string>
    <string name="no">خیر</string>

    //notifications
    <string name="user_pass_eror">نام کاربری یا کلمه عبور نادرست است</string>
    <string name="server_code_markaz_eror">متاسفانه خطایی از سمت سرور رخ داده است. کد مرکز خالی میباشد</string>
    <string name="server_token_eror">متاسفانه خطایی از سمت سرور رخ داده است. token خالی میباشد</string>
    <string name="server_name_eror">متاسفانه خطایی از سمت سرور رخ داده است. نام خالی میباشد</string>
    <string name="server_id_eror">متاسفانه خطایی از سمت سرور رخ داده است. ID خالی میباشد</string>
    <string name="server_IP_eror">امکان برقراری اتصال به آدرس سرور وارد شده نمیباشد</string>
    <string name="please_enter_variable">لطفا %1$s وارد نمایید</string>
    <string name="is_not_valid_value">مقدار %1$s صحیح نیست</string>
    <string name="dont_use_space"> مقدار %1$s صحیح نمیباشد. استفاده از فاصله در %1$s غیر مجاز می باشد.</string>
    <string name="dont_use_port_address"> مقدار %1$s صحیح نمیباشد. استفاده از : در %1$s غیر مجاز می باشد.</string>
    <string name="add_product">افزودن کالا</string>
    <string name="add_payment">پرداخت</string>
    <string name="row">ردیف</string>
    <string name="barcode">بارکد</string>
    <string name="name">نام</string>
    <string name="count">تعداد</string>
    <string name="customer_tel">تلفن مشتری</string>
    <string name="search">جستجو</string>
    <string name="barcode_scanner">اسکن بارکد</string>
    <string name="selectPriceLevel">انتخاب قیمت</string>
    <string name="select">انتخاب</string>
    <string name="factor_is_empty">کالایی در فاکتور ثبت نشده است!</string>
    <string name="save_factor_and_continue">ثبت و ادامه</string>
    <string name="save_factor_and_calculate">ثبت و محاسبه</string>
    <string name="fi">فی</string>
    <string name="orders_fragment_label">فاکتورهای معلق</string>
    <string name="factor_id_header">ش پ</string>
    <string name="mobile">تلفن مشتری</string>
    <string name="cost">مبلغ</string>
    <string name="rial">ریال</string>
    <string name="details">جزئیات</string>
    <string name="pay">پرداخت</string>
    <string name="finilizing">ثبت نهایی</string>
    <string name="dots">...</string>
    <string name="order_details_fragment">فاکتور</string>
    <string name="SelectProductFragment">کالاها</string>
    <string name="payment_fragment_lable">پرداخت</string>
    <string name="terminal_type">نوع ترمینال</string>
    <string name="terminal_name">نام ترمینال</string>
    <string name="bank">بانک</string>
    <string name="price">مبلغ</string>
    <string name="delete">حذف</string>
    <string name="submit">ثبت</string>
    <string name="connectToPrinter">اتصال پرینتر</string>
    <string name="pick_printer_device">دستگاه پرینتر خود را انتخاب نمایید</string>
    <string name="claimant">وصول مطالبات</string>
    <string name="printer">پرینتر:</string>
    <string name="not_connected">عدم اتصال</string>
    <string name="print_factor_data">چاپ اطلاعات فاکتور</string>
    <string name="payment_type">روش پرداخت</string>
    <string name="account_number">شماره حساب</string>
    <string name="cash_desk_availability">موجودی صندوق (ریال)</string>
    <string name="date_lbl">تاریخ:</string>
    <string name="repo_lbl">انبار:</string>
    <string name="product_lbl">کالا:</string>

    //DatePicker
    <string name="select_date">انتخاب تاریخ</string>
    <string name="filter">فیلتر</string>
    <string name="fromDate">از:</string>
    <string name="endDate">تا:</string>
    <string name="farvardin">فروردین</string>
    <string name="ordibehesh">اردیبهشت</string>
    <string name="khordad">خرداد</string>
    <string name="tir">تیر</string>
    <string name="mordad">مرداد</string>
    <string name="shahrivar">شهریور</string>
    <string name="mehr">مهر</string>
    <string name="aban">آبان</string>
    <string name="azar">آذر</string>
    <string name="dey">دی</string>
    <string name="bahman">بهمن</string>
    <string name="esfand">اسفند</string>
    <string name="show_disable_products">کالاهای غیر فعال هم نمایش داده شود</string>
    <string name="show_available_products">فقط کالاهای موجود نمایش داده شود</string>
    <string name="availability">موجودی</string>
    <string name="storeRoom">انبار</string>
    <string name="report_type">نوع گزارش</string>
    <string name="type">نوع</string>
    <string name="order_point">نقطه سفارش</string>
    <string name="need_to_order">نیاز به سفارش</string>
    <string name="number">شماره</string>
    <string name="applicant_name">درخواست کننده</string>
    <string name="order_date">تاریخ سفارش</string>
    <string name="request_date">تاریخ درخواست</string>
    <string name="state">وضعیت</string>
    <string name="description">توضیحات</string>
    <string name="product_row">اقلام</string>
    <string name="more">اطلاعات بیشتر</string>
    <string name="code">کد</string>
    <string name="store_room_type">نوع انبار</string>
    <string name="info">اطلاعات</string>

</resources>