<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/lyContent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zikey.android.razanstoreapp.ui.activities.MainActivity"
    tools:showIn="@layout/payment_fragment">

    <LinearLayout
        android:id="@+id/lyRowFour"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/lyHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="50dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/row"
                android:textColor="@color/white"
                android:textSize="@dimen/very_small_10" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="50dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/terminal_type"
                android:textColor="@color/white"
                android:textSize="@dimen/very_small_10" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:minHeight="50dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/terminal_name"
                android:textColor="@color/white"
                android:textSize="@dimen/very_small_10" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="50dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/bank"
                android:textColor="@color/white"
                android:textSize="@dimen/very_small_10" />


            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="50dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/price"
                android:textColor="@color/white"
                android:textSize="@dimen/very_small_10" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="50dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="@dimen/very_small_10" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingBottom="160dp" />

    </LinearLayout>


</RelativeLayout>