<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:background="@color/colorPrimary"
            android:layoutDirection="rtl"
            app:menu="@menu/menu_search"
            app:navigationIcon="@drawable/ic_round_arrow_forward_ios_24_white"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#11FFFFFF" />

        <LinearLayout
            android:id="@+id/lyHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="50dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/row"
                android:textColor="@color/white"
                android:textSize="@dimen/very_small_10" />


            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="50dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/code"
                android:textColor="@color/white"
                android:textSize="@dimen/very_small_10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:minHeight="50dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="@dimen/very_small_10" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="50dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/barcode"
                android:textColor="@color/white"
                android:textSize="@dimen/very_small_10" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="50dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/info"
                android:textColor="@color/white"
                android:textSize="@dimen/very_small_10" />


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color"
            android:clipToPadding="false"
            android:paddingBottom="5dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lyProgressBottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:visibility="gone">

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/colorAccent" />

    </LinearLayout>

    <include
        android:id="@+id/lyProgres"
        layout="@layout/layout_progress_match_parent_with_title" />

</RelativeLayout>